Moving everything to org

--- a/archiso/pacman.conf
+++ b/archiso/pacman.conf
@@ -100,6 +100,6 @@ Include = /etc/pacman.d/mirrorlist
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
 
-[xelph-aur]
+[xelph-repo]
 SigLevel = Optional TrustedOnly
-Server = https://aakashsharma7269.github.io/$repo/$arch
+Server = https://xelphlinux.github.io/$repo/$arch
