--- a/archiso/airootfs/etc/pacman.conf
+++ b/archiso/airootfs/etc/pacman.conf
@@ -101,6 +101,6 @@ Include = /etc/pacman.d/mirrorlist
 #[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
-[xelph-aur]
+[xelph-repo]
 SigLevel = Optional TrustedOnly
-Server = https://aakashsharma7269.github.io/$repo/$arch
+Server = https://xelphlinux.github.io/$repo/$arch
