--- a/archiso/efiboot/loader/entries/archiso-x86_64-linux.conf
+++ b/archiso/efiboot/loader/entries/archiso-x86_64-linux.conf
@@ -1,6 +1,9 @@
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
+
 title   Xelph Linux install medium (x86_64, UEFI)
 linux   /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
 initrd  /%INSTALL_DIR%/boot/intel-ucode.img
 initrd  /%INSTALL_DIR%/boot/amd-ucode.img
 initrd  /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
-options archisobasedir=%INSTALL_DIR% cow_spacesize=4G archisolabel=%ARCHISO_LABEL%
+options archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% cow_spacesize=4G video=1920x1080
