Added todo for myself and added chaotic AUR

--- a/archiso/airootfs/etc/pacman.conf
+++ b/archiso/airootfs/etc/pacman.conf
@@ -104,3 +104,6 @@ Include = /etc/pacman.d/mirrorlist
 [xelph-repo]
 SigLevel = Optional TrustedOnly
 Server = https://xelphlinux.github.io/$repo/$arch
+
+[chaotic-aur]
+Include = /etc/pacman.d/chaotic-mirrorlist
