--- a/archiso/pacman.conf
+++ b/archiso/pacman.conf
@@ -103,3 +103,6 @@ Include = /etc/pacman.d/mirrorlist
 [xelph-repo]
 SigLevel = Optional TrustedOnly
 Server = https://xelphlinux.github.io/$repo/$arch
+
+[chaotic-aur]
+Include = /etc/pacman.d/chaotic-mirrorlist
