edited pacman.conf and removed packages

--- a/archiso/airootfs/etc/pacman.conf
+++ b/archiso/airootfs/etc/pacman.conf
@@ -35,8 +35,8 @@ Architecture = auto
 Color
 ILoveCandy
 #NoProgressBar
-#CheckSpace
-#VerbosePkgLists
+CheckSpace
+VerbosePkgLists
 ParallelDownloads = 5
 
 # By default, pacman accepts packages signed by keys that its local keyring
