--- a/archiso/pacman.conf
+++ b/archiso/pacman.conf
@@ -33,8 +33,8 @@ Architecture = auto
 Color
 ILoveCandy
 #NoProgressBar
-#CheckSpace
-#VerbosePkgLists
+CheckSpace
+VerbosePkgLists
 ParallelDownloads = 5
 
 # By default, pacman accepts packages signed by keys that its local keyring
