pacman.conf update

--- a/archiso/airootfs/etc/pacman.conf
+++ b/archiso/airootfs/etc/pacman.conf
@@ -105,5 +105,9 @@ Include = /etc/pacman.d/mirrorlist
 SigLevel = Optional TrustedOnly
 Server = https://xelphlinux.github.io/$repo/$arch
 
+[xelph-core-repo]
+SigLevel = Optional TrustedOnly
+Server = https://xelphlinux.github.io/$repo/$arch
+
 [chaotic-aur]
 Include = /etc/pacman.d/chaotic-mirrorlist
