edited pacman.conf, ready to build

--- a/archiso/pacman.conf
+++ b/archiso/pacman.conf
@@ -2,6 +2,8 @@
 # /etc/pacman.conf
 #
 # See the pacman.conf(5) manpage for option and repository directives
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
 
 #
 # GENERAL OPTIONS
@@ -99,8 +101,11 @@ Include = /etc/pacman.d/mirrorlist
 #[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
-
 [xelph-repo]
+SigLevel = Optional TrustedOnly
+Server = https://xelphlinux.github.io/$repo/$arch
+
+[xelph-core-repo]
 SigLevel = Optional TrustedOnly
 Server = https://xelphlinux.github.io/$repo/$arch
 
