addition of ISO repo

--- a/archiso/pacman.conf
+++ b/archiso/pacman.conf
@@ -109,5 +109,10 @@ Server = https://xelphlinux.github.io/$repo/$arch
 SigLevel = Optional TrustedOnly
 Server = https://xelphlinux.github.io/$repo/$arch
 
+
+[xelph-iso-repo]
+SigLevel = Optional TrustedOnly
+Server = https://xelphlinux.github.io/$repo/$arch
+
 [chaotic-aur]
 Include = /etc/pacman.d/chaotic-mirrorlist
