--- a/archiso/syslinux/archiso_sys-linux.cfg
+++ b/archiso/syslinux/archiso_sys-linux.cfg
@@ -1,12 +1,52 @@
 #
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-LABEL arch64
+LABEL arch64 free
 TEXT HELP
-Boot the Xelph Linux install medium on BIOS.
-It allows you to install Xelph Linux or perform system maintenance.
+Boot the XelphLinux install medium on BIOS with open source drivers.
+It allows you to install XelphLinux or perform system maintenance.
 ENDTEXT
-MENU LABEL Xelph Linux install medium (x86_64, BIOS)
+MENU LABEL Boot XelphLinux (x86_64, BIOS, open source)
 LINUX /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
 INITRD /%INSTALL_DIR%/boot/intel-ucode.img,/%INSTALL_DIR%/boot/amd-ucode.img,/%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
-APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% cow_spacesize=4G
+APPEND archisobasedir=%INSTALL_DIR% cow_spacesize=4G archisolabel=%ARCHISO_LABEL% driver=free nouveau.modeset=1 radeon.modeset=1 i915.modeset=1
+
+LABEL arch64 freenonouveau
+TEXT HELP
+Boot the XelphLinux install medium on BIOS with open source drivers.
+It allows you to install XelphLinux or perform system maintenance.
+ENDTEXT
+MENU LABEL Boot XelphLinux (x86_64, BIOS, open source, no nouveau)
+LINUX /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
+INITRD /%INSTALL_DIR%/boot/intel-ucode.img,/%INSTALL_DIR%/boot/amd-ucode.img,/%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
+APPEND archisobasedir=%INSTALL_DIR% cow_spacesize=4G archisolabel=%ARCHISO_LABEL% driver=freenonouveau radeon.modeset=1 i915.modeset=1
+
+LABEL arch64 nonfree
+TEXT HELP
+Boot the XelphLinux install medium on BIOS with proprietary drivers (NVIDIA).
+It allows you to install XelphLinux or perform system maintenance.
+ENDTEXT
+MENU LABEL Boot XelphLinux (x86_64, BIOS, NVIDIA)
+LINUX /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
+INITRD /%INSTALL_DIR%/boot/intel-ucode.img,/%INSTALL_DIR%/boot/amd-ucode.img,/%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
+APPEND archisobasedir=%INSTALL_DIR% cow_spacesize=4G archisolabel=%ARCHISO_LABEL% driver=nonfree nouveau.modeset=0 radeon.modeset=1 i915.modeset=1
+
+LABEL arch64 nonfree nonouveau
+TEXT HELP
+Boot the XelphLinux install medium on BIOS with proprietary drivers (NVIDIA).
+It allows you to install XelphLinux or perform system maintenance.
+ENDTEXT
+MENU LABEL Boot XelphLinux (x86_64, BIOS, NVIDIA, no nouveau)
+LINUX /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
+INITRD /%INSTALL_DIR%/boot/intel-ucode.img,/%INSTALL_DIR%/boot/amd-ucode.img,/%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
+APPEND archisobasedir=%INSTALL_DIR% cow_spacesize=4G archisolabel=%ARCHISO_LABEL% driver=nonfreenonouveau nouveau.modeset=0 radeon.modeset=1 i915.modeset=1
+
+LABEL arch64 nomodeset
+TEXT HELP
+Boot the XelphLinux install medium on BIOS with nomodeset.
+It allows you to install XelphLinux or perform system maintenance.
+ENDTEXT
+MENU LABEL Boot XelphLinux (x86_64, BIOS, nomodeset)
+LINUX /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
+INITRD /%INSTALL_DIR%/boot/intel-ucode.img,/%INSTALL_DIR%/boot/amd-ucode.img,/%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
+APPEND archisobasedir=%INSTALL_DIR% cow_spacesize=4G archisolabel=%ARCHISO_LABEL% driver=free nomodeset nouveau.modeset=0 radeon.modeset=0 i915.modeset=0
